# fog-computing-prototype

./: .gitignore  LICENSE  README.md  docker-compose.yaml  fog-computing-ss22-prototype.code-workspace  gcp-00-settings.sh  gcp-01-initial-setup.sh  gcp-02-install-python.sh  gcp-03-upload-files.sh  gcp-04-start-cloud-app.sh  gcp-all.sh  gcp-instance-01-start.sh  gcp-instance-02-stop.sh  start-wsl-shell.ps1  template.credential.sh
cloud/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
cloud/cloud/: config.py  main.py  models.py  schemas.py  service.py
cloud/tests/: test_cloud.py
dashboard/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
dashboard/src/: App.vue  api.ts  main.ts  store.ts  types.ts
dashboard/src/components/: FCard.vue  LoadingIndicator.vue  SensorChart.vue  SensorChartList.vue  SensorTable.vue
dashboard/src/router/: index.ts
dashboard/src/utils/: example.ts
dashboard/src/views/: HomeView.vue  PageNotFoundView.vue  SettingsView.vue
docs/architecture/: architecture.drawio  logo.drawio
local/: Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  sensors.yaml
local/local/: __main.py  config.py  main.py  messaging.py  models.py  schemas.py  service.py  utils.py
local/local/sensors/: __init__.py  core.py  humidity.py  temperature.py
local/tests/: test_local.py
